# Peralta-POS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  package.json  railway.json  render.yaml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.desktop.example  .env.production.example  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.mjs
apps/web/src/: App.tsx  styles.css
database/: README.md
database/mysql/: check-and-seed-demo.sql  create-database.sql
docs/: arquitectura.md  base-de-datos.md  contexto-codex-peralta-pos.txt  desarrollo.md  despliegue-gratis-vercel-render-aiven.md  despliegue-web-y-escritorio.md  fiscal-rd.md  modulos.md  requisitos.md  roadmap.md
nbproject/: project.xml
output/desktop-launcher/: Abrir Peralta POS.cmd  Peralta POS Web.url
output/report-validation/: counts.docx  counts.xlsx  movements.docx  movements.xlsx  products.docx  products.xlsx  purchase-order.docx  purchase-order.xlsx  purchases.docx  purchases.xlsx  replenishment.docx  replenishment.xlsx  suppliers.docx  suppliers.xlsx
scripts/: build-desktop-web.ps1  build-web.ps1  create-web-launcher.ps1  dev-api-tools.ps1  dev-share-web.ps1  dev-web.ps1  share-demo.ps1  start-class-demo.cmd  stop-class-demo.cmd  sync-dgii-rnc.ps1
services/api/: README.md  nbactions.xml  pom.xml
tmp/quote-validation/: inspect-docx.py  last-args.txt  last-cmd-args.txt  last-start-args.txt  render-xlsx.mjs  run-api.cmd
(+207 files in other folders)
