[package]
name = "peralta_pos_desktop"
version = "0.1.0"
description = "Aplicacion de escritorio para Peralta POS"
authors = ["Peralta POS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
